# IsoMap

./: .aidevops.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.gitnexus/: meta.json
data/schemas/: isoarch_v1.json  neotoma_v2.json
data/templates/: essd_template.tex
docs/: PLAN.md  SCOPE.md  scope.md
docs/research-papers/: Data Standardization Tool Research.md  Paleoecological Data Standardization Research.md  v2_v3_research_dossier.md
docs/research-prompts/: 01_neotoma_submission_process.txt  02_isoarch_isomemo_submission.txt  03_taxonomic_authority_apis.txt  04_isotopic_data_quality_standards.txt  05_column_name_matching_algorithms.txt  06_pangaea_and_other_repositories.txt  07_supp_reproducible_data_transformation.txt  IsoMap_prompt_A
scripts/: generate_test_data.py  scibert_export.py
src/isomap/: main.py
src/isomap/core/: chronology.py  datapaper.py  exporter.py  importer.py  mapper.py  provenance.py  spatial.py  validator.py
src/isomap/matching/: distribution.py  exact.py  fuzzy.py  preferences.py  semantic.py  valentine_matcher.py
tests/: test_core_chronology.py  test_core_exporter.py  test_core_exporter_lipd.py  test_core_exporter_templates.py  test_core_mapper.py  test_core_provenance.py  test_core_spatial.py  test_core_validator.py  test_e2e.py  test_importer.py  test_mapper.py  test_rpc.py
tests/test_data/: legacy_data.csv
ui/: package-lock.json  package.json
ui/e2e/: app.spec.ts
ui/src/: App.tsx
ui/src-tauri/: tauri.conf.json
ui/src/api/: sidecar.ts
(+7 files in other folders)
