[project]
name = "isomap"
version = "0.1.0"
description = "Isotopic and paleoecological data standardisation middleware"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "pandera>=0.20",
    "rapidfuzz>=3.9",
    "sentence-transformers>=3.0",
    "pydantic>=2.8",
    "httpx>=0.27",
    "chardet>=5.2",
    "pyproj>=3.6",
    "shapely>=2.0",
    "geopandas>=1.0",
    "pylipd>=1.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pre-commit>=3.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
